--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,12 @@ services:
       DATABASE_URL: postgresql://uavuser:uavpass@postgis:5432/uavdb
       GEOJSON_2D_PATH: /data/2D_safe_corridors_prioritized.geojson
       GEOJSON_3D_PATH: /data/3D_merged_network.geojson
+      GEOJSON_HDB_PATH: /data/hdb_footprints.geojson
       TILES_DIR: /data/tiles
     volumes:
       - ./2D_safe_corridors_prioritized.geojson:/data/2D_safe_corridors_prioritized.geojson:ro
       - ./3D_merged_network.geojson:/data/3D_merged_network.geojson:ro
+      - ./hdb_footprints.geojson:/data/hdb_footprints.geojson:ro
       - ./tiles:/data/tiles:ro
     ports:
       - "8000:8000"
